Update deploy.yml to include repository_dispatch
Add repository_dispatch trigger for spreadsheet updates

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,8 @@
 name: Build and Deploy Astro Site
 
 on:
+  repository_dispatch:
+    types: [spreadsheet_update] # GASからの通知を受け取るトリガー
   push:
     branches: [ main ] # メインブランチにプッシュされた時に実行
   workflow_dispatch: # 手動実行も可能
